[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main Menu/Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://Main Menu/Buttons/ButtonMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/sbh_Huge.tres" type="DynamicFont" id=3]
[ext_resource path="res://Sprites/Background.png" type="Texture" id=4]

[node name="Main" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="CanvasLayer/MainMenu"]
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 640, 360 )
__meta__ = {
"_edit_lock_": true
}

[node name="TitleMargin" type="MarginContainer" parent="CanvasLayer/MainMenu"]
anchor_right = 1.0
margin_bottom = 47.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CanvasLayer/MainMenu/TitleMargin"]
margin_right = 640.0
margin_bottom = 47.0
size_flags_horizontal = 7
size_flags_vertical = 6
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 3 )
text = "Super Comet Blaster"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -49.0
margin_right = 56.0
margin_bottom = 49.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
margin_right = 112.0
margin_bottom = 98.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer/CenterContainer"]
margin_right = 112.0
margin_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSingleplayer" parent="CanvasLayer/MainMenu/MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 112.0
focus_mode = 0
text = "Solo Mode"

[node name="ButtonMultiplayer" parent="CanvasLayer/MainMenu/MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 34.0
margin_right = 112.0
margin_bottom = 64.0
text = "Multiplayer"

[node name="Quit" parent="CanvasLayer/MainMenu/MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 68.0
margin_right = 112.0
margin_bottom = 98.0
text = "Quit"

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/CenterContainer/VBoxContainer/ButtonSingleplayer" to="CanvasLayer/MainMenu" method="_on_Singleplayer_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/CenterContainer/VBoxContainer/ButtonMultiplayer" to="CanvasLayer/MainMenu" method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/CenterContainer/VBoxContainer/Quit" to="CanvasLayer/MainMenu" method="_on_Quit_pressed"]
